compatibility-tests/compile-fail/tests/ui/duplication-enum.rs
use snafu::prelude::*;

#[derive(Debug, Snafu)]
#[snafu(visibility(pub))]
#[snafu(visibility(pub))]
enum EnumError {
    AVariant,
}

fn main() {}
