compatibility-tests/compile-fail/tests/ui/duplication-enum.stderr
error: Multiple `visibility` attributes are not supported on an enum
 --> $DIR/duplication-enum.rs:5:9
  |
5 | #[snafu(visibility(pub))]
  |         ^^^^^^^^^^^^^^^
